@@ -6,6 +6,7 @@ codebird-php - changelog
 + #152 Throw Exception on failed remote media download
 + Add REST API POST statuses/unretweet/:id
 + Add Ads API GET insights/keywords/search
++ #151 Avoid JSON_BIGINT_AS_STRING errors
 
 3.0.0 (2016-01-01)
 + Add unit testing suite
